add to sku crawler
